Fix quick actions icon alignment

--- a/modules/monitoring/public/css/module.less
+++ b/modules/monitoring/public/css/module.less
@@ -145,11 +145,6 @@
     border-right: none;
     padding-right: 0;
   }
-
-  li i {
-    font-size: 1.2em;
-    vertical-align: middle;
-  }
 }
 
 /* Generic box element */
